[gd_scene load_steps=6 format=2]

[ext_resource path="res://entities/enemy/enemy.png" type="Texture" id=1]
[ext_resource path="res://entities/StateMachine.gd" type="Script" id=2]
[ext_resource path="res://entities/enemy/Enemy.gd" type="Script" id=3]
[ext_resource path="res://entities/enemy/states/Shooting.gd" type="Script" id=4]
[ext_resource path="res://entities/bullet/SolidEnemyBullet.tscn" type="PackedScene" id=5]

[node name="Shooter" type="Node2D"]
script = ExtResource( 3 )
BULLET_SCENE = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 2 )
FIRST_STATE = NodePath("Shooting")

[node name="Shooting" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="Cooldown" type="Timer" parent="StateMachine/Shooting"]
wait_time = 0.1

[node name="Duration" type="Timer" parent="StateMachine/Shooting"]
one_shot = true

[node name="Reload" type="Timer" parent="StateMachine/Shooting"]
wait_time = 0.5
one_shot = true
[connection signal="timeout" from="StateMachine/Shooting/Cooldown" to="StateMachine/Shooting" method="_on_Cooldown_timeout"]
[connection signal="timeout" from="StateMachine/Shooting/Duration" to="StateMachine/Shooting" method="_on_Duration_timeout"]
[connection signal="timeout" from="StateMachine/Shooting/Reload" to="StateMachine/Shooting" method="_on_Reload_timeout"]
